--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,13 @@ edition = "2021"
 debug = true
 
 [[bench]]
-name = "palmdoc_compression"
+name = "palmdoc"
 harness = false
 
 [dev-dependencies]
 hex = "0.4.3"
 criterion = { version = "0.5", features = ["html_reports"] }
-rand = "0.8.5"
+lipsum = "0.9.0"
 
 [dependencies]
 memchr = "2.7.1"
