Have both random & lorem ipsum benchmarks, add throughput

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ harness = false
 hex = "0.4.3"
 criterion = { version = "0.5", features = ["html_reports"] }
 lipsum = "0.9.0"
+rand = "0.8.5"
 
 [dependencies]
+byteorder = "1.5.0"
 memchr = "2.7.1"
