--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,9 @@ lipsum = "0.9.0"
 rand = "0.8.5"
 
 [dependencies]
+bitvec = "1.0.1"
 byteorder = "1.5.0"
+constriction = "0.3.5"
+huffman-coding = "0.1.2"
+huffman-compress = "0.6.1"
 memchr = "2.7.1"
