--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,5 +22,9 @@ byteorder = "1.5.0"
 constriction = "0.3.5"
 huffman-coding = "0.1.2"
 huffman-compress = "0.6.1"
+itertools = "0.12.1"
 memchr = "2.7.1"
+rand = "0.8.5"
+range-ext = "0.3.0"
+reservoir-sampling = "0.5.1"
 thiserror = "1.0.57"
